force-app/main/default/objects/clofor_com_cfs__ConsolCNTR__c/clofor_com_cfs__ConsolCNTR__c.object-meta.xml
<CustomObject>
    <label>Consol CNTR</label>
    <nameField>
        <displayFormat>CSCT A-{000000}</displayFormat>
        <label>Consol CNTR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consol CNTR</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>