force-app/main/default/objects/clofor_com_cfs__ConsolCNTR__c/fields/clofor_com_cfs__CargoUnit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CargoUnit__c</fullName>
    <label>Cargo Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__UnitType</valueSetName>
    </valueSet>
</CustomField>