force-app/main/default/objects/clofor_com_cfs__ConsolCNTR__c/fields/clofor_com_cfs__ContainerCopyStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerCopyStatus__c</fullName>
    <label>Container Copy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__RecordCreationStatus</valueSetName>
    </valueSet>
</CustomField>