force-app/main/default/objects/clofor_com_cfs__ConsolCNTR__c/fields/clofor_com_cfs__ContainerNO__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerNO__c</fullName>
    <label>Container Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>