force-app/main/default/objects/clofor_com_cfs__ConsolCNTR__c/fields/clofor_com_cfs__ContainerSummary__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerSummary__c</fullName>
    <formula>&apos;Cont Type: &apos;+TEXT( clofor_com_cfs__ContainerType__c )+&apos;| Cont Number: &apos;+ clofor_com_cfs__ContainerNO__c +&apos;| Seal No: &apos;+ clofor_com_cfs__SealNo__c +&apos;| Cargo Quantity: &apos;+ TEXT(clofor_com_cfs__CargoQuantity__c)+&apos; &apos;+ TEXT(clofor_com_cfs__CargoUnit__c)+&apos;(s)&apos;  +&apos;| G.W: &apos;+ TEXT(clofor_com_cfs__GrossWeightKg__c) +&apos; Kg&apos;+&apos;| CBM: &apos;+ TEXT(clofor_com_cfs__MeasurementCBM__c)</formula>
    <label>Container Summary</label>
    <type>Text</type>
</CustomField>