force-app/main/default/objects/clofor_com_cfs__ConsolCNTR__c/fields/clofor_com_cfs__FMSSO4__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FMSSO4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FMS S/O-4</label>
    <referenceTo>clofor_com_cfs__CustomObject1__c</referenceTo>
    <relationshipLabel>CONSOL CNTR (FMS S/O-4)</relationshipLabel>
    <relationshipName>ConsolCNTRSO4</relationshipName>
    <type>Lookup</type>
</CustomField>