force-app/main/default/objects/clofor_com_cfs__ConsolCNTR__c/fields/clofor_com_cfs__FullOrPartMode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FullOrPartMode__c</fullName>
    <label>Full or Part Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ContainerMode</valueSetName>
    </valueSet>
</CustomField>