force-app/main/default/objects/clofor_com_cfs__ConsolCNTR__c/fields/clofor_com_cfs__Goods__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Goods__c</fullName>
    <label>Description of Goods</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>