force-app/main/default/objects/clofor_com_cfs__ConsolCNTR__c/fields/clofor_com_cfs__NetWeightKg__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NetWeightKg__c</fullName>
    <label>Net Weight(Kg)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>