force-app/main/default/objects/clofor_com_cfs__ConsolCNTR__c/fields/clofor_com_cfs__SealNo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SealNo__c</fullName>
    <label>Seal Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>