force-app/main/default/objects/clofor_com_cfs__ConsolCNTR__c/fields/clofor_com_cfs__WeighingCompany__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WeighingCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weighing Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CONSOL CNTR(WEIGHING COMPANY)</relationshipLabel>
    <relationshipName>ConsolCNTR</relationshipName>
    <type>Lookup</type>
</CustomField>