force-app/main/default/objects/clofor_com_cfs__ConsolCNTR__c/fields/clofor_com_cfs__WeighingDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WeighingDate__c</fullName>
    <label>Weighing Date</label>
    <type>Date</type>
</CustomField>