force-app/main/default/objects/clofor_com_cfs__ConsolCNTR__c/recordTypes/clofor_com_cfs__ConsolCNTR.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ConsolCNTR</fullName>
    <active>true</active>
    <label>Consol CNTR</label>
</RecordType>